further Grade refactoring (see Enrolment and EnrolmentEvaluation getGradeValue,setGradeValue,getGrade,setGrade)